--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ b. Классы НАЗЫВАЕМ по смыслу.
         text-align: center;
     }
     .links {
-        color: white;
+        color: red;
         font-size: 24px;
         margin-right: 35px;
         text-decoration: none;
